--- a/index.html
+++ b/index.html
@@ -1,11 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ishigami Zone</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ishigami Zone</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <h1>Bonjour !</h1>
+  <!-- Header -->
+  <header>
+    <h1>Ishigami Zone</h1>
+    <p>Découvrez notre page Facebook et nos actualités !</p>
+    <nav>
+      <a href="index.html">Accueil</a>
+      <a href="about.html">À propos</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
+
+  <!-- Section principale -->
+  <main>
+    <section class="intro">
+      <img src="images/photo_de_profil.jpg" alt="Logo Ishigami Zone">
+      <p>Bienvenue sur notre site ! Cliquez sur le bouton ci-dessous pour visiter notre page Facebook et suivre toutes nos actualités.</p>
+      <a href="https://web.facebook.com/profile.php?id=61578175771318" class="button" target="_blank">Visiter la page Facebook</a>
+    </section>
+
+    <!-- Section Facebook -->
+    <section class="facebook-section">
+      <h2>Nos Liens Facebook</h2>
+      <div class="facebook-links">
+        <a href="https://web.facebook.com/profile.php?id=61578175771318" target="_blank">Page Principale</a>
+        <!-- Tu pourras ajouter d'autres liens ici -->
+      </div>
+    </section>
+  </main>
+
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2025 Ishigami Zone. Tous droits réservés.</p>
+  </footer>
 </body>
 </html>
