--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
         Envoyer un message WhatsApp
       </a>
       
-      <p>Remplacez <strong>261XXXXXXXXX</strong> par votre numéro complet avec l’indicatif international (ex : 261 pour Madagascar).</p>
+      <p><strong>261XXXXXXXXX</strong> mon numéro</p>
     </section>
   </main>
 
