--- a/index.html
+++ b/index.html
@@ -27,14 +27,34 @@
       <a href="https://web.facebook.com/profile.php?id=61578175771318" class="button" target="_blank">Visiter la page Facebook</a>
     </section>
 
-    <!-- Section Facebook -->
-    <section class="facebook-section">
-      <h2>Nos Liens Facebook</h2>
-      <div class="facebook-links">
-        <a href="https://web.facebook.com/profile.php?id=61578175771318" target="_blank">Page Principale</a>
-        <!-- Tu pourras ajouter d'autres liens ici -->
-      </div>
-    </section>
+    <!-- Section Réseaux sociaux -->
+<section class="social-section">
+  <h2>Nos Réseaux</h2>
+  <div class="social-links">
+    <!-- Facebook -->
+    <a href="https://web.facebook.com/profile.php?id=61578175771318" target="_blank" class="facebook">
+      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="white" viewBox="0 0 24 24">
+        <path d="M22.675 0h-21.35C.594 0 0 .593 0 1.326v21.348C0 23.406.593 24 1.326 24h11.495v-9.294H9.691v-3.622h3.13V8.413c0-3.1 1.893-4.788 4.658-4.788 1.325 0 2.464.099 2.795.143v3.24l-1.918.001c-1.504 0-1.794.715-1.794 1.762v2.31h3.587l-.467 3.622h-3.12V24h6.116C23.406 24 24 23.406 24 22.674V1.326C24 .593 23.406 0 22.675 0z"/>
+      </svg>
+    </a>
+
+    <!-- Instagram -->
+    <a href="https://www.instagram.com/ishigami_zone" target="_blank" class="instagram">
+      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="white" viewBox="0 0 24 24">
+        <path d="M12 2.163c3.204 0 3.584.012 4.85.07 1.366.062 2.633.34 3.608 1.314.975.975 1.253 2.242 1.314 3.608.058 1.266.07 1.645.07 4.85s-.012 3.584-.07 4.85c-.062 1.366-.34 2.633-1.314 3.608-.975.975-2.242 1.253-3.608 1.314-1.266.058-1.645.07-4.85.07s-3.584-.012-4.85-.07c-1.366-.062-2.633-.34-3.608-1.314-.975-.975-1.253-2.242-1.314-3.608C2.175 15.584 2.163 15.204 2.163 12s.012-3.584.07-4.85c.062-1.366.34-2.633 1.314-3.608.975-.975 2.242-1.253 3.608-1.314C8.416 2.175 8.796 2.163 12 2.163zm0-2.163C8.741 0 8.332.012 7.052.07 5.78.127 4.613.405 3.675 1.343 2.738 2.28 2.46 3.447 2.403 4.719.012 8.332 0 8.741 0 12c0 3.259.012 3.668.07 4.948.057 1.272.335 2.439 1.272 3.376.937.937 2.104 1.215 3.376 1.272C8.332 23.988 8.741 24 12 24s3.668-.012 4.948-.07c1.272-.057 2.439-.335 3.376-1.272.937-.937 1.215-2.104 1.272-3.376C23.988 15.668 24 15.259 24 12s-.012-3.668-.07-4.948c-.057-1.272-.335-2.439-1.272-3.376-.937-.937-2.104-1.215-3.376-1.272C15.668.012 15.259 0 12 0zm0 5.838a6.162 6.162 0 1 0 0 12.324 6.162 6.162 0 0 0 0-12.324zm0 10.162a3.999 3.999 0 1 1 0-7.998 3.999 3.999 0 0 1 0 7.998zm6.406-11.845a1.44 1.44 0 1 0 0 2.881 1.44 1.44 0 0 0 0-2.881z"/>
+      </svg>
+    </a>
+
+    <!-- YouTube -->
+    <a href="https://www.youtube.com/@ishigami_zone" target="_blank" class="youtube">
+      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="white" viewBox="0 0 24 24">
+        <path d="M23.498 6.186a2.985 2.985 0 0 0-2.104-2.105C19.33 3.5 12 3.5 12 3.5s-7.33 0-9.394.581a2.985 2.985 0 0 0-2.104 2.105C0 8.252 0 12 0 12s0 3.748.502 5.814a2.985 2.985 0 0 0 2.104 2.105C4.67 20.5 12 20.5 12 20.5s7.33 0 9.394-.581a2.985 2.985 0 0 0 2.104-2.105C24 15.748 24 12 24 12s0-3.748-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/>
+      </svg>
+    </a>
+  </div>
+</section>
+
+
   </main>
 
   <!-- Footer -->
